ebc/parser/evoBasicParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/sources/evobasic-project-antlr/ebc\evoBasic.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class evoBasicParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, StringLiteral=19, CharLiteral=20, Digit=21, FloatingPoint=22, 
		Comment=23, BlockComment=24, WS=25, Impl=26, Mod=27, Const=28, Continue=29, 
		Nothing=30, Throw=31, Extend=32, Module=33, True=34, False=35, New=36, 
		Xor=37, Not=38, And=39, Or=40, Try=41, Catch=42, Virtual=43, Override=44, 
		Operator=45, Factory=46, Implements=47, Import=48, Class=49, Preserve=50, 
		Redim=51, ParamArray=52, Declare=53, Lib=54, Enum=55, If=56, Super=57, 
		Wend=58, From=59, Namespace=60, Implement=61, Type=62, Alias=63, Self=64, 
		Static=65, ModuleInfo=66, Public=67, Private=68, Protected=69, Get=70, 
		Set=71, Property=72, Var=73, Dim=74, Let=75, Return=76, Function=77, Difference=78, 
		Union=79, Case=80, Select=81, End=82, Until=83, Loop=84, Exit=85, While=86, 
		Do=87, Each=88, To=89, Step=90, Next=91, In=92, For=93, Optional=94, Byval=95, 
		Byref=96, Then=97, Else=98, ElseIf=99, Call=100, Sub=101, As=102, Is=103, 
		ID=104;
	public const int
		RULE_document = 0, RULE_declaration = 1, RULE_declarationNoAccessFlag = 2, 
		RULE_ctorDecl = 3, RULE_extendPart = 4, RULE_classDecl = 5, RULE_implPart = 6, 
		RULE_moduleDecl = 7, RULE_dimDecl = 8, RULE_typeDecl = 9, RULE_enumDecl = 10, 
		RULE_enumConstant = 11, RULE_externalFunc = 12, RULE_externalSub = 13, 
		RULE_importDecl = 14, RULE_functionDecl = 15, RULE_subDecl = 16, RULE_parameterList = 17, 
		RULE_parameter = 18, RULE_accessFlag = 19, RULE_methodFlag = 20, RULE_statement = 21, 
		RULE_throwStmt = 22, RULE_tryStmt = 23, RULE_catchPart = 24, RULE_forStmt = 25, 
		RULE_forIterator = 26, RULE_dimStmt = 27, RULE_variableDecl = 28, RULE_loopStmt = 29, 
		RULE_onelineIfStmt = 30, RULE_ifStmt = 31, RULE_elseIfPart = 32, RULE_elsePart = 33, 
		RULE_selectStmt = 34, RULE_caseList = 35, RULE_controlStmt = 36, RULE_exprStmt = 37, 
		RULE_expression = 38, RULE_assignmentExpression = 39, RULE_assignment = 40, 
		RULE_conditionalExpression = 41, RULE_conditionalNotExpression = 42, RULE_relationalExpression = 43, 
		RULE_relationalOp = 44, RULE_additiveExpression = 45, RULE_multiplicativeExpression = 46, 
		RULE_unaryExpression = 47, RULE_primaryExpression = 48, RULE_typePath = 49, 
		RULE_terminalExpression = 50, RULE_literal = 51, RULE_ltOp = 52, RULE_leOp = 53, 
		RULE_eqOp = 54, RULE_geOp = 55, RULE_gtOp = 56, RULE_neOp = 57, RULE_divOp = 58, 
		RULE_mulOp = 59, RULE_plusOp = 60, RULE_minusOp = 61, RULE_argumentList = 62, 
		RULE_argument = 63, RULE_annotation = 64, RULE_subScriptSuffix = 65, RULE_newline = 66;
	public static readonly string[] ruleNames = {
		"document", "declaration", "declarationNoAccessFlag", "ctorDecl", "extendPart", 
		"classDecl", "implPart", "moduleDecl", "dimDecl", "typeDecl", "enumDecl", 
		"enumConstant", "externalFunc", "externalSub", "importDecl", "functionDecl", 
		"subDecl", "parameterList", "parameter", "accessFlag", "methodFlag", "statement", 
		"throwStmt", "tryStmt", "catchPart", "forStmt", "forIterator", "dimStmt", 
		"variableDecl", "loopStmt", "onelineIfStmt", "ifStmt", "elseIfPart", "elsePart", 
		"selectStmt", "caseList", "controlStmt", "exprStmt", "expression", "assignmentExpression", 
		"assignment", "conditionalExpression", "conditionalNotExpression", "relationalExpression", 
		"relationalOp", "additiveExpression", "multiplicativeExpression", "unaryExpression", 
		"primaryExpression", "typePath", "terminalExpression", "literal", "ltOp", 
		"leOp", "eqOp", "geOp", "gtOp", "neOp", "divOp", "mulOp", "plusOp", "minusOp", 
		"argumentList", "argument", "annotation", "subScriptSuffix", "newline"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'='", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'.'", "'['", 
		"']'", "'<'", "'>'", "'\\'", "':'", "'\\n\\r'", "'\\n'", "'\\r'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "StringLiteral", "CharLiteral", 
		"Digit", "FloatingPoint", "Comment", "BlockComment", "WS", "Impl", "Mod", 
		"Const", "Continue", "Nothing", "Throw", "Extend", "Module", "True", "False", 
		"New", "Xor", "Not", "And", "Or", "Try", "Catch", "Virtual", "Override", 
		"Operator", "Factory", "Implements", "Import", "Class", "Preserve", "Redim", 
		"ParamArray", "Declare", "Lib", "Enum", "If", "Super", "Wend", "From", 
		"Namespace", "Implement", "Type", "Alias", "Self", "Static", "ModuleInfo", 
		"Public", "Private", "Protected", "Get", "Set", "Property", "Var", "Dim", 
		"Let", "Return", "Function", "Difference", "Union", "Case", "Select", 
		"End", "Until", "Loop", "Exit", "While", "Do", "Each", "To", "Step", "Next", 
		"In", "For", "Optional", "Byval", "Byref", "Then", "Else", "ElseIf", "Call", 
		"Sub", "As", "Is", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "evoBasic.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static evoBasicParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public evoBasicParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public evoBasicParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(evoBasicParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IevoBasicVisitor<TResult> typedVisitor = visitor as IevoBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << Const) | (1L << Module) | (1L << New) | (1L << Virtual) | (1L << Override) | (1L << Import) | (1L << Class) | (1L << Declare) | (1L << Enum) | (1L << Type))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (Static - 65)) | (1L << (Public - 65)) | (1L << (Private - 65)) | (1L << (Dim - 65)) | (1L << (Function - 65)) | (1L << (Sub - 65)))) != 0)) {
				{
				{
				State = 134;
				declaration();
				}
				}
				State = 139;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 140;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationNoAccessFlagContext declarationNoAccessFlag() {
			return GetRuleContext<DeclarationNoAccessFlagContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AccessFlagContext accessFlag() {
			return GetRuleContext<AccessFlagContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IevoBasicVisitor<TResult> typedVisitor = visitor as IevoBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Public || _la==Private) {
				{
				State = 142;
				accessFlag();
				}
			}

			State = 145;
			declarationNoAccessFlag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationNoAccessFlagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DimDeclContext dimDecl() {
			return GetRuleContext<DimDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext typeDecl() {
			return GetRuleContext<TypeDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumDeclContext enumDecl() {
			return GetRuleContext<EnumDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExternalFuncContext externalFunc() {
			return GetRuleContext<ExternalFuncContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExternalSubContext externalSub() {
			return GetRuleContext<ExternalSubContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportDeclContext importDecl() {
			return GetRuleContext<ImportDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclContext functionDecl() {
			return GetRuleContext<FunctionDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubDeclContext subDecl() {
			return GetRuleContext<SubDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleDeclContext moduleDecl() {
			return GetRuleContext<ModuleDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDeclContext classDecl() {
			return GetRuleContext<ClassDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CtorDeclContext ctorDecl() {
			return GetRuleContext<CtorDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NewlineContext newline() {
			return GetRuleContext<NewlineContext>(0);
		}
		public DeclarationNoAccessFlagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarationNoAccessFlag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.EnterDeclarationNoAccessFlag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.ExitDeclarationNoAccessFlag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IevoBasicVisitor<TResult> typedVisitor = visitor as IevoBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarationNoAccessFlag(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationNoAccessFlagContext declarationNoAccessFlag() {
		DeclarationNoAccessFlagContext _localctx = new DeclarationNoAccessFlagContext(Context, State);
		EnterRule(_localctx, 4, RULE_declarationNoAccessFlag);
		try {
			State = 159;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 147;
				dimDecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 148;
				typeDecl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 149;
				enumDecl();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 150;
				externalFunc();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 151;
				externalSub();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 152;
				importDecl();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 153;
				functionDecl();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 154;
				subDecl();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 155;
				moduleDecl();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 156;
				classDecl();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 157;
				ctorDecl();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 158;
				newline();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CtorDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] New() { return GetTokens(evoBasicParser.New); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode New(int i) {
			return GetToken(evoBasicParser.New, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NewlineContext[] newline() {
			return GetRuleContexts<NewlineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NewlineContext newline(int i) {
			return GetRuleContext<NewlineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode End() { return GetToken(evoBasicParser.End, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExtendPartContext extendPart() {
			return GetRuleContext<ExtendPartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public CtorDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ctorDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.EnterCtorDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.ExitCtorDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IevoBasicVisitor<TResult> typedVisitor = visitor as IevoBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCtorDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CtorDeclContext ctorDecl() {
		CtorDeclContext _localctx = new CtorDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_ctorDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161;
			Match(New);
			State = 162;
			parameterList();
			State = 164;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 163;
				extendPart();
				}
				break;
			}
			State = 166;
			newline();
			State = 170;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__9) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << StringLiteral) | (1L << CharLiteral) | (1L << Digit) | (1L << FloatingPoint) | (1L << Continue) | (1L << Nothing) | (1L << Throw) | (1L << True) | (1L << False) | (1L << New) | (1L << Not) | (1L << Try) | (1L << If))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (Self - 64)) | (1L << (Dim - 64)) | (1L << (Return - 64)) | (1L << (Select - 64)) | (1L << (Exit - 64)) | (1L << (While - 64)) | (1L << (For - 64)) | (1L << (Optional - 64)) | (1L << (ID - 64)))) != 0)) {
				{
				{
				State = 167;
				statement();
				}
				}
				State = 172;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 173;
			Match(End);
			State = 174;
			Match(New);
			State = 175;
			newline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExtendPartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Extend() { return GetToken(evoBasicParser.Extend, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentListContext argumentList() {
			return GetRuleContext<ArgumentListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NewlineContext newline() {
			return GetRuleContext<NewlineContext>(0);
		}
		public ExtendPartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_extendPart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.EnterExtendPart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IevoBasicListener typedListener = listener as IevoBasicListener;
			if (typedListener != null) typedListener.ExitExtendPart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IevoBasicVisitor<TResult> typedVisitor = visitor as IevoBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExtendPart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExtendPartContext extendPart() {
		ExtendPartContext _localctx = new ExtendPartContext(Context, State);
		EnterRule(_localctx, 8, RULE_extendPart);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 178;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__17))) != 0)) {
				{
				State = 177;
				newline();
				}
			}

			State = 180;
			Match(Extend);
			State = 181;
			argumentList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
